<resources>
    <string name="app_name">Ximbal</string>
    <string name="title_activity_main_menu2">MainMenu2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="usuario_o_correo_electronico">Correo Electrónico</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="app_logo">app logo</string>
    <string name="Configurar_escaner">Configurar escáner</string>
    <string name="obdii_icon">OBDII Icon</string>
    <string name="start_icon">Start Icon</string>
    <string name="iniciar_evaluaci_n">Iniciar OBDII</string>
    <string name="user_logo">User logo</string>
    <string name="registrarse">Registrarse</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los Términos y Condiciones</string>
    <string name="la_contrase_a_debe_ser_de_4_caracteres_o_m_s">La contraseña debe ser de 4 caracteres o más.</string>
    <string name="_10_digitos">10 Digitos</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo Electrónico</string>
    <string name="mail_logo">Mail logo</string>
    <string name="date_selected"></string>
    <string name="phone_number_logo">phone number logo</string>


    <string-array name="trips">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>



    <!-- <string name="app_name" translatable="false">Ximbal</string> -->
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="text_gps" translatable="false">GPS</string>
    <string name="text_obd" translatable="false">OBD</string>
    <string name="text_bluetooth" translatable="false">Bluetooth</string>
    <string name="text_orientation_default" translatable="false">N</string>
    <string name="text_zero" translatable="false">0</string>
    <string name="text_consumption_default" translatable="false">0l/100km</string>
    <string name="text_runtime_default" translatable="false">00:00:00</string>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="action_settings">Configuración</string>
    <string name="action_clear_codes">Limpiar codigos</string>
    <string name="command_list">Elegir comando</string>
    <string name="menu_item_trip_delete">Borrar</string>
    <string name="notification_label">Presionar para abrir lector de OBDII</string>
    <string name="service_started">La conexión OBDII ha comenzado.</string>
    <string name="service_stopped">La conexión OBDII se ha detenido.</string>
    <string name="title_activity_trips_list">Lista de Viajes</string>
    <string name="title_activity_trouble_codes">Códigos de Error</string>
    <string name="menu_trip_list">Viajes</string>
    <string name="pref_upload_category_title">Carga de datos</string>
    <string name="dialog_loading_body">Cargando aplicación, por favor espere…</string>
    <string name="dialog_loading_title">Cargando…</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_get_dtc">Obtener DTC</string>
    <string name="menu_start_live_data">Iniciar datos en vivo</string>
    <string name="menu_stop_live_data">Detener datos en vivo</string>
    <string name="title_pref_commands">Comandos OBD</string>
    <string name="title_pref_obd">Preferencias OBD</string>
    <string name="notification_action">Presionar para abrir lector OBDII</string>
    <string name="service_starting">Iniciando conexión OBDII...</string>
    <string name="status_bluetooth_connected">conectado</string>
    <string name="status_bluetooth_disabled">deshabilitado</string>
    <string name="status_bluetooth_ok">disponible</string>
    <string name="status_gps_no_support">no disponible</string>
    <string name="status_gps_ready">disponible</string>
    <string name="status_obd_ready">OK</string>
    <string name="status_bluetooth_error_connecting">conexión fallida</string>
    <string name="status_gps_stopped">detenido</string>
    <string name="status_no_bluetooth_id">no disponible</string>
    <string name="status_obd_disconnected">desconectado</string>
    <string name="text_no_bluetooth_id">Lo sentimos, su dispositivo no soporta Bluetooth</string>
    <string name="text_no_gps_support">Lo sentimos, su dispositivo no soporta Bluetooth</string>
    <string name="text_bluetooth_nodevice">Dispositivo Bluetooth no seleccionado</string>
    <string name="text_bluetooth_error_connecting">No se puede conectar con el dispositivo Bluetooth</string>
    <string name="status_bluetooth_connecting">conectando...</string>
    <string name="text_bluetooth_disabled">Usted tiene Bluetooth deshabilitado. Por favor habilitelo</string>
    <string name="status_obd_no_support">OBD no soportado</string>
    <string name="text_dtc_no_data">No hay DTC guardado</string>
    <string name="text_save_trip_not_available">Una disculpa, el viaje no será guardado.</string>
    <string name="text_obd_command_failure">Error en comando OBD</string>
    <string name="status_gps_fix">GPS fijado</string>
    <string name="status_gps_no_fix">GPS no fijado</string>
    <string name="status_gps_not_used">GPS no utilizado</string>
    <string name="status_gps_started"> GPS iniciado</string>
    <string name="status_obd_data">recibiendo información...</string>
    <string name="text_no_orientation_sensor">Sensor de orientación no encontrado</string>
    <string name="pref_upload_title">Habilitar carga de datos</string>
    <string name="pref_upload_summaryOff">Habilitar carga de datos http</string>
    <string name="pref_upload_summaryOn">Deshabilitar carga de datos http</string>
    <string name="pref_upload_url_title">URL de carga</string>
    <string name="pref_upload_url_summary">URL POST que recibirá datos en tiempo real</string>
    <string name="pref_vehicle_id_title">ID del vehiculo</string>
    <string name="pref_vehicle_id_summary">Utilizar en carga de datos el ID único de este vehículo</string>
    <string name="pref_bluetooth_title">Habilitar Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Encender Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Apagar Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">Lista de dispositivos Bluetooth vinculados.</string>
    <string name="pref_bluetooth_list_devices_title">Dispositivos Bluetooth</string>
    <string name="pref_gps_category_title">Habilitar GPS</string>
    <string name="pref_gps_category_summaryOff">Encender GPS</string>
    <string name="pref_gps_category_summaryOn">Apagar GPS</string>
    <string name="pref_gps_update_period_title">Actualizar periodo en segundos</string>
    <string name="pref_gps_update_period_summary">Tiempo que transcurre entre la consulta de una nueva posición, en segundos</string>
    <string name="pref_gps_distance_period_title">Actualizar periodo en metros</string>
    <string name="pref_gps_distance_period_summary">Distancia mínima entre las actualizaciones de localización, en metros</string>
    <string name="pref_obd_protocols_title">Protocolo OBD</string>
    <string name="pref_obd_protocols_summary">Seleccionar protocolo OBD a utilizar</string>
    <string name="pref_imperial_units_title">Sistema de Unidades</string>
    <string name="pref_imperial_units_summaryOff">Habilitar sistema de unidades</string>
    <string name="pref_imperial_units_summaryOn">Volver a unidades de medida</string>
    <string name="pref_obd_update_period_title">Actualizar periodo en segundos</string>
    <string name="pref_obd_update_period_summary">El tiempo transcurrido entre la consulta de los datos del vehículo en segundos</string>
    <string name="pref_max_fuel_econ_title">Valor máximo de ahorro de combustible</string>
    <string name="pref_max_fuel_econ_summary">Cualquier valor de economía de combustible mayor que este será desechado</string>
    <string name="pref_volumetric_efficiency_dialog_title">Eficiencia volumetrica (ej 0.85)</string>
    <string name="pref_volumetric_efficiency_summary">Utilizar para el ahorro de combustible en vehículos sin sensor MAF</string>
    <string name="pref_volumetric_efficiency_title">Eficiencia volumetrica</string>
    <string name="pref_engine_displacement_title">Desplazamiento del motor (litros)</string>
    <string name="pref_engine_displacement_summary">Utilizar para el ahorro de combustible en vehículos sin sensor MAF</string>
    <string name="pref_reader_config_title">Comandos de configuración del lector</string>
    <string name="pref_reader_config_summary">Comandos para configurar el lector bluetooth, separado con una nueva línea</string>
    <string name="title_pref_commands_summary">Seleccione los comandos que desea ver en tiempo real.</string>
    <string name="title_pref_commands_title">Comandos OBD</string>
    <string name="title_pref_full_logging">Configuración de registro completo</string>
    <string name="pref_enable_full_logging_summary">Permite el registro completo fuera de línea con la carga</string>
    <string name="pref_enable_full_logging_title">Habilitar el registro completo</string>
    <string name="default_dirname_full_logging">Ximbal_dataset</string>
    <string name="pref_dirname_dialogTitle">Seleccione el nombre del directorio para guardar los registros</string>
    <string name="pref_dirname_title">Nombre del directorio</string>
    <string name="pref_dirname_summary">Nombre del directorio donde guardar los archivos</string>
    <string name="pref_dev_email_title">Correo del desarrollador</string>
    <string name="pref_dev_email_summary">Registros se enviaran a esta dirección de correo electronico</string>
    <string name="text_noerrors">No se encontraron errores!</string>

</resources>
