<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:foregroundTint="#10d168"
    tools:context=".auth.Register"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="68dp"
        android:layout_height="102dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTop"
        app:srcCompat="@drawable/logo_ximbal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:background="#10d168"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton24"
            android:layout_width="28dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_arrow"
            android:backgroundTint="#FFFFFF"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewMisViajes"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.481" />

        <TextView
            android:id="@+id/textViewMisViajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="170dp"
            android:baselineAligned="false"
            android:text="Crear Cuenta"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.487" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/etName3"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo2" />

    <EditText
        android:id="@+id/etName2"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName3" />

    <EditText
        android:id="@+id/etName4"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName2" />

    <EditText
        android:id="@+id/etName6"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/_10_digitos"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName5"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/etName5"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:layout_marginTop="6dp"
        android:contentDescription="password_logo"
        android:tint="#10d168"
        app:layout_constraintEnd_toStartOf="@+id/etName5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/locked" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/phone_number_logo"
        android:tint="#10d168"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/etName6"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/telephone" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/mail_logo"
        android:tint="#10d168"
        app:layout_constraintEnd_toStartOf="@+id/etName2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/mail" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_logo"
        android:tint="#10d168"
        app:layout_constraintEnd_toStartOf="@+id/etName3"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo2"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:contentDescription="password_logo"
        android:tint="#10d168"
        app:layout_constraintEnd_toStartOf="@+id/etName4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/locked" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="296dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/la_contrase_a_debe_ser_de_4_caracteres_o_m_s"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="229dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/acepto_los_t_rminos_y_condiciones"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister2"
        android:layout_width="329dp"
        android:layout_height="46dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/green_button"
        android:text="@string/registrarse"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>