<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:foregroundTint="#10d168"
    tools:context=".Register"
    tools:layout_editor_absoluteY="25dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:background="#10d168"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="26dp"
            android:layout_height="48dp"
            android:layout_marginEnd="368dp"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476"
            app:srcCompat="@drawable/back_arrow" />

        <TextView
            android:id="@+id/textViewMisViajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:text="Crear Cuenta"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="144dp"
        android:layout_height="47dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="20dp"
        android:layout_height="23dp"
        android:layout_marginTop="24dp"
        android:text="O"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <EditText
        android:id="@+id/etName2"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/etName3" />

    <EditText
        android:id="@+id/etName3"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName4"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/etName2" />

    <EditText
        android:id="@+id/etName5"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/etName4" />

    <EditText
        android:id="@+id/etName6"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/_10_digitos"
        android:inputType="textEmailAddress|textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Inverse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/etName5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/la_contrase_a_debe_ser_de_4_caracteres_o_m_s"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="229dp"
        android:layout_height="39dp"
        android:layout_marginBottom="32dp"
        android:text="@string/acepto_los_t_rminos_y_condiciones"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister2"
        android:layout_width="329dp"
        android:layout_height="46dp"
        android:layout_marginBottom="60dp"
        android:background="#10d168"
        android:text="@string/registrarse"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/user_logo"
        android:tint="#10d168"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/mail_logo"
        android:tint="#10d168"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mail" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="40dp"
        android:contentDescription="password_logo"
        android:tint="#10d168"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/locked" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="40dp"
        android:contentDescription="password_logo"
        android:tint="#10d168"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/locked" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/phone_number_logo"
        android:tint="#10d168"
        app:layout_constraintBottom_toBottomOf="@+id/etName6"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/telephone" />

</androidx.constraintlayout.widget.ConstraintLayout>